# auav_f22

./: .gitmodules
onboard/ws/src/: testasdfasdfasdf.c
onboard/ws/src/auav_f22/: CMakeLists.txt  package.xml
onboard/ws/src/auav_f22/scripts/: offboard.py
